# hologit

./: .bldr.toml  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .studiorc  .tool-versions  404.html  CNAME  Cargo.toml  Dockerfile  README.md  RELEASE.md  action.yml  cli.js  entrypoint.sh  index.d.ts  index.html  index.js  jest.config.js  jsconfig.json  mkdocs.yml  package-lock.json  package.json  plan.sh  post.js  tsconfig.json
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docs-site.yml  pr-test.yml  publish-actions-develop.yml  publish-actions-v1.yml  publish-habitat.yml  publish-npm.yml  publish-website.yml  release-deploy.yml  release-prepare.yml  (+2 more)
.holo/: config.toml
commands/: branch.js  init.js  init.test.js  inspect.js  lens.js  progress.js  project.js  pull.js  source.js  studio.js  test.js  watch.js
docs/: .pages  README.md  SUMMARY.md
grand-tour/: index.html
holo-engine/: Cargo.toml
holo-engine/src/: branch.rs  config.rs  error.rs  lib.rs  projection.rs  source.rs  tree.rs
holo-engine/tests/: projection.rs  source.rs  tree_merge.rs
holo-engine/tests/helpers/: mod.rs
holo-projector/: Cargo.toml  README.md
holo-projector/src/: branch.rs  config.rs  error.rs  lib.rs  projection.rs  source.rs
holo-projector/tests/: projection.rs  source.rs
holo-projector/tests/helpers/: mod.rs
holo-tree/: Cargo.toml  README.md
holo-tree/src/: error.rs  glob.rs  lib.rs  repo.rs  toml.rs  tree.rs
holo-tree/tests/: tree_merge.rs
holo-tree/tests/helpers/: mod.rs
lens-container/: Dockerfile  lens-tree  package-lock.json  package.json  server.js
lib/: BlobFile.js  BlobObject.js  Branch.js  CommitObject.js  Configurable.js  Git.js  Lens.js  Mapping.js  ParentsBag.js  Projection.js  ProjectionPlan.js  Repo.js  Source.js  SpecObject.js  Studio.js  TreeObject.js  TreeRoot.js  WorkFile.js  Workspace.js  git.js  holo.js  index.js  log.js  logger.js
programmatic-api/: index.html
quick-start/: index.html
rust-poc/: Cargo.toml  SPEC.md
rust-poc/src/: config.rs  main.rs  projection.rs  tree.rs
script/: -studio-bootstrap  studio
search/: search_index.json
studio/: .dockerignore  Dockerfile  default.toml  plan.sh
test/: git.js  setup.js
types/: index.d.ts
workflows/: index.html
(+85 files in other folders)
