[package]
name = "holo-projector"
version = "0.1.0"
edition = "2021"
description = "Holobranch projection engine — compose git trees from declarative configs"
license = "MIT"

[dependencies]
holo-tree = { path = "../holo-tree", version = "0.1" }
gix = { version = "0.72" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2"
thiserror = "2"

[[bin]]
name = "holo-project"
path = "src/bin/project.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:anyhow"]

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.anyhow]
version = "1"
optional = true

[dev-dependencies]
tempfile = "3"
